scripts/generator/tests/fixtures/dportsv3/valid/multi_target.dops
target @main
port category/name
mk add USES ssl
target @2025Q1
mk remove USES linux
