scripts/generator/tests/fixtures/dportsv3/invalid/semantic/duplicate-port.dops
target @main
port category/name
port category/second
mk set VAR "value"
